# pyearcal

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  __init__.py  example.py  flickr_downloader.py  font_loader.py  image_sources.py  main.py  pyearcal.py  pyproject.toml  requirements.txt  setup.py
l18n/: __init__.py  slovak.py
locale/: __init__.py  czech.py  default.py
pyearcal/: __init__.py  cli.py  flickr_downloader.py  font_loader.py  image_sources.py  year_calendar.py
pyearcal/l10n/: __init__.py  czech.py  default.py  italian.py  slovak.py
